--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "sarif"
     ],
     "engines": {
-        "vscode": "^1.72.0"
+        "vscode": "1.72.0"
     },
     "activationEvents": [
         "onLanguage:json",
@@ -166,8 +166,8 @@
         "@typescript-eslint/eslint-plugin": "3.1.0",
         "@typescript-eslint/parser": "3.1.0",
         "@zeit/ncc": "0.22.1",
-        "copy-webpack-plugin": "^9.1.0",
-        "css-loader": "^6.3.0",
+        "copy-webpack-plugin": "9.1.0",
+        "css-loader": "6.3.0",
         "eslint": "7.1.0",
         "eslint-plugin-filenames": "1.3.2",
         "eslint-plugin-header": "3.0.0",
@@ -175,23 +175,23 @@
         "mocha": "10.2.0",
         "nyc": "15.1.0",
         "proxyquire": "2.1.3",
-        "sass": "^1.49.9",
-        "sass-loader": "^12.1.0",
+        "sass": "1.49.9",
+        "sass-loader": "12.1.0",
         "sinon": "9.0.2",
-        "style-loader": "^3.3.0",
-        "ts-loader": "^9.2.6",
+        "style-loader": "3.3.0",
+        "ts-loader": "9.2.6",
         "ts-node": "8.8.2",
         "tslint": "5.12.1",
         "typescript": "3.8.3",
-        "vsce": "^1.100.0",
-        "webpack": "^5.76.0",
-        "webpack-cli": "^4.8.0",
-        "webpack-dev-server": "^4.2.1"
+        "vsce": "1.100.0",
+        "webpack": "5.76.0",
+        "webpack-cli": "4.8.0",
+        "webpack-dev-server": "4.2.1"
     },
     "dependencies": {
-        "@types/diff": "^5.0.2",
-        "chokidar": "^3.3.0",
-        "diff": "^3.5.0",
+        "@types/diff": "5.0.2",
+        "chokidar": "3.3.0",
+        "diff": "3.5.0",
         "follow-redirects": "1.15.4",
         "https-proxy-agent": "5.0.0",
         "mobx": "5.15.4",
@@ -199,8 +199,8 @@
         "node-fetch": "2.6.7",
         "react": "16.13.1",
         "react-dom": "16.13.1",
-        "react-markdown": "^5.0.3",
-        "stream-meter": "^1.0.4",
+        "react-markdown": "5.0.3",
+        "stream-meter": "1.0.4",
         "semver": "7.5.2",
         "tmp": "0.1.0",
         "vscode-codicons": "0.0.2",
