--- a/package.json
+++ b/package.json
@@ -188,7 +188,7 @@
 		"ts-loader": "^9.2.6",
 		"ts-node": "8.8.2",
 		"typescript": "3.8.3",
-		"typescript-esbuild": "latest",
+		"typescript-esbuild": "0.4.5",
 		"vsce": "^1.100.0",
 		"webpack": "^5.76.0",
 		"webpack-cli": "^4.8.0",
