--- a/package.json
+++ b/package.json
@@ -1,35 +1,10 @@
 {
-	"name": "sarif-viewer",
-	"displayName": "SARIF Viewer",
-	"version": "0.0.1",
-	"private": false,
-	"description": "Adds support for viewing SARIF logs",
-	"homepage": "https://github.com/CodeEditorLand/Foundation#readme",
-	"bugs": {
-		"url": "https://github.com/CodeEditorLand/Foundation/issues"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/CodeEditorLand/Foundation.git"
-	},
-	"license": "SEE LICENSE IN LICENSE",
-	"author": {
-		"name": "Playform",
-		"email": "Hello@Playform.Cloud",
-		"url": "https://playform.cloud"
-	},
-	"type": "module",
-	"main": "./out/context.js",
-	"scripts": {
-		"package": "vsce package",
-		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'",
-		"server": "webpack serve --mode development",
-		"prestart": "npm install",
-		"start": "webpack --watch --mode development",
-		"test:watch": "mocha --watch",
-		"testcoverage": "nyc mocha",
-		"vscode:prepublish": "webpack --mode production"
-	},
+	"activationEvents": [
+		"onLanguage:json",
+		"onUri",
+		"workspaceContains:.git",
+		"workspaceContains:.sarif"
+	],
 	"contributes": {
 		"commands": [
 			{
@@ -132,12 +107,6 @@
 			]
 		}
 	},
-	"activationEvents": [
-		"onLanguage:json",
-		"onUri",
-		"workspaceContains:.git",
-		"workspaceContains:.sarif"
-	],
 	"dependencies": {
 		"@types/diff": "^5.0.2",
 		"chokidar": "^3.3.0",
@@ -157,6 +126,7 @@
 		"vscode-extension-telemetry": "0.1.6",
 		"vscode-uri": "2.1.2"
 	},
+	"description": "Adds support for viewing SARIF logs",
 	"devDependencies": {
 		"@actions/core": "1.9.1",
 		"@actions/github": "2.1.1",
@@ -194,11 +164,22 @@
 		"webpack-cli": "^4.8.0",
 		"webpack-dev-server": "^4.2.1"
 	},
+	"displayName": "SARIF Viewer",
 	"extensionDependencies": [
 		"vscode.git"
 	],
-	"publishConfig": {
-		"access": "public"
+	"icon": "icon.png",
+	"main": "./out/context.js",
+	"name": "sarif-viewer",
+	"scripts": {
+		"package": "vsce package",
+		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'",
+		"prestart": "npm install",
+		"server": "webpack serve --mode development",
+		"start": "webpack --watch --mode development",
+		"test:watch": "mocha --watch",
+		"testcoverage": "nyc mocha",
+		"vscode:prepublish": "webpack --mode production"
 	},
-	"icon": "icon.png"
+	"type": "module"
 }
