--- a/package.json
+++ b/package.json
@@ -119,15 +119,15 @@
 		"workspaceContains:.sarif"
 	],
 	"dependencies": {
-		"@types/diff": "^5.0.2",
-		"chokidar": "^3.3.0",
-		"diff": "^3.5.0",
+		"@types/diff": "5.0.2",
+		"chokidar": "3.3.0",
+		"diff": "3.5.0",
 		"follow-redirects": "1.15.6",
 		"https-proxy-agent": "5.0.0",
 		"mobx": "5.15.4",
 		"node-fetch": "2.6.7",
 		"semver": "7.5.2",
-		"stream-meter": "^1.0.4",
+		"stream-meter": "1.0.4",
 		"tmp": "0.1.0"
 	},
 	"devDependencies": {
@@ -144,15 +144,15 @@
 		"@types/tmp": "0.1.0",
 		"@types/url-join": "4.0.0",
 		"@zeit/ncc": "0.22.1",
-		"css-loader": "^6.3.0",
+		"css-loader": "6.3.0",
 		"json-source-map": "0.6.1",
 		"nyc": "15.1.0",
 		"proxyquire": "2.1.3",
-		"sass": "^1.49.9",
-		"sass-loader": "^12.1.0",
+		"sass": "1.49.9",
+		"sass-loader": "12.1.0",
 		"sinon": "9.0.2",
-		"style-loader": "^3.3.0",
-		"ts-loader": "^9.2.6"
+		"style-loader": "3.3.0",
+		"ts-loader": "9.2.6"
 	},
 	"extensionDependencies": [
 		"vscode.git"
