--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
 	"dependencies": {
 		"@types/diff": "5.2.1",
 		"chokidar": "3.6.0",
-		"diff": "5.2.0",
+		"diff": "6.0.0-beta",
 		"follow-redirects": "1.15.6",
 		"https-proxy-agent": "7.0.5",
 		"mobx": "6.13.1",
@@ -125,7 +125,7 @@
 		"@actions/github": "6.0.0",
 		"@types/follow-redirects": "1.14.4",
 		"@types/mock-require": "2.0.3",
-		"@types/node": "22.4.0",
+		"@types/node": "22.5.0",
 		"@types/node-fetch": "3.0.3",
 		"@types/proxyquire": "1.3.31",
 		"@types/sarif": "2.1.7",
@@ -139,7 +139,7 @@
 		"nyc": "17.0.0",
 		"proxyquire": "2.1.3",
 		"sass": "1.77.8",
-		"sass-loader": "16.0.0",
+		"sass-loader": "16.0.1",
 		"sinon": "18.0.0",
 		"style-loader": "4.0.0",
 		"ts-loader": "9.5.1"
